<?xml version ="1.0" encoding="utf-8"?>

<!--
    Student Paula Dwan
    ID      13208660
    Module  COMP-47330 - Practical Android Programming
    Course  MSc Advanced Software Engineering

    File    activity_register_sign_in.xmlml
            This is the layout for an new user to register to use the app : user name and password.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical"
    android:horizontalSpacing="@dimen/activity_horizontal_margin"
    android:verticalSpacing="@dimen/activity_vertical_margin">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:padding="5dp"
        android:shrinkColumns="1">

        <TableRow
            android:id="@+id/rowUser"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textviewUser"
                android:background="@drawable/cell_round_navy"
                android:gravity="center_horizontal"
                android:text="@string/tvUserName"
                android:textColor="@color/grey_pale"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/edittextRegisterUser"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/hintUserNameToLogin"
                android:inputType="text"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textStyle="italic">
                <requestFocus />
            </EditText>
        </TableRow>

        <TableRow
            android:id="@+id/rowPasswordCreate"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">

            <TextView
                android:id="@+id/textviewPasswordRegister"
                android:background="@drawable/cell_round_navy"
                android:gravity="center_horizontal"
                android:text="@string/tvUserPassword"
                android:textColor="@color/grey_pale"
                android:textStyle="bold"></TextView>

            <EditText
                android:id="@+id/edittextPasswordRegister"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/hintRegisterUserPasswordToLogin"
                android:inputType="textPassword|text"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textStyle="italic"></EditText>
        </TableRow>

        <TableRow
            android:id="@+id/rowPasswordConfirm"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp">

            <TextView android:id="@+id/null1"></TextView>

            <EditText
                android:id="@+id/edittextPasswordConfirm"
                android:layout_weight="1"
                android:ems="5"
                android:hint="@string/hintConfirmUserPasswordToLogin"
                android:inputType="textPassword|text"
                android:textAppearance="@android:style/TextAppearance.Small"
                android:textStyle="italic"></EditText>
        </TableRow>

        <TableRow
            android:id="@+id/rowButtons"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="5dp"
            android:gravity="center">

            <TextView android:id="@+id/null10"></TextView>

            <Button
                android:id="@+id/buttonRegisterSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_round_navy"
                android:clickable="true"
                android:ems="5"
                android:onClick="registerCustomerSQLDetails"
                android:text="@string/btnSubmit"
                android:textColor="@color/grey_pale"
                android:textStyle="bold|italic" />

            <Button
                android:id="@+id/buttonRegisterClearAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/cell_round_grey"
                android:clickable="true"
                android:ems="5"
                android:onClick="clearAllRegisterLoginDetails"
                android:padding="5dp"
                android:text="@string/btnClearAll"
                android:textColor="@color/blue_dark"
                android:textStyle="italic" />
        </TableRow>
    </TableLayout>
</ScrollView>