<?xml version ="1.0" encoding="utf-8"?>

<!--
    Student Paula Dwan
    ID      13208660
    Module  COMP-47330 - Practical Android Programming
    Course  MSc Advanced Software Engineering

    File    activity_login_home.xml
            First/home layout encountered : new user registers or an existing user signs in.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.dwan.paula.LunarEnterprises.LoginHomeActivity">

    <TextView
        android:id="@+id/textviewLunarStores"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_round_black"
        android:gravity="center_horizontal"
        android:text="@string/tvWelcomeSales"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/grey_pale"
        android:textStyle="bold"></TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20dp"></TextView>

    <TextView
        android:id="@+id/textviewWelcome2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_pale"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:singleLine="false"
        android:text="@string/tvWelcomeUse"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/black"
        android:textStyle="italic"></TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/textviewWelcomeExistingUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_pale"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:singleLine="false"
        android:text="@string/tvWelcomeSignin"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textColor="@color/purple"
        android:textStyle="italic"></TextView>

    <TextView
        android:id="@+id/textviewWelcomeNewUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/grey_pale"
        android:gravity="center_horizontal"
        android:padding="5dp"
        android:singleLine="false"
        android:text="@string/tvWelcomeRegister"
        android:textAppearance="@android:style/TextAppearance.Small"
        android:textColor="@color/blue_dark"
        android:textStyle="italic"></TextView>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_round_purple"
        android:onClick="signInExistingUser"
        android:text="@string/btnSignIn"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/grey_pale"
        android:textStyle="bold" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="20dp" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/cell_round_navy"
        android:onClick="registerNewUser"
        android:text="@string/btnRegister"
        android:textAllCaps="true"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/grey_pale"
        android:textStyle="bold" />
</LinearLayout>